# swagger.yaml
@@ -17,8 +17,6 @@ components:
     Hippo:
       type: object
       properties:
-        id:
-          type: string
         name:
           type: string
         weightKg:
@@ -30,7 +28,12 @@ components:
         maxSpeedKmHr:
           type: number
         birthDate:
-          type: date
+          type: string
+          format: date
+        createdBy:
+          type: string
+        lastUpdatedBy:
+          type: string
 
     User:
       type: object
@@ -131,6 +134,46 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Hippo"
+
+  /hippos/fetch-sorted:
+    post:
+      summary: Retrieves a sorted and paginated list of hippos
+      description: Retrieves a sorted and paginated list of hippos as JSON objects.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                sortField:
+                  type: string
+                  description: The field name to sort by.
+                  example: "name"
+                sortOrder:
+                  type: string
+                  description: The order of sorting, can be 'asc' or 'desc'.
+                  example: "asc"
+                page:
+                  type: integer
+                  description: The page number to fetch.
+                  example: 1
+                limit:
+                  type: integer
+                  description: The number of items per page.
+                  example: 10
+              required:
+                - page
+                - limit
+      responses:
+        "200":
+          description: A list of hippos, sorted and paginated.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Hippo"
 
   /hippos/{id}:
     get:
